# mmwave_radar_devtool

./: .gitignore  README.md  dataset_recorder.bash  pyproject.toml  radar_bin_visualizer_fixed.py  targets_open.json
config/: iwr6843aop_profile_raw_capture.cfg  iwr6843aop_usb_point_cloud.cfg  xwr18xx_profile_raw_capture.cfg  xwr68xx_profile_raw_capture.cfg
experiments/: static_water_grid.json  static_water_grid_cls_fullspec.json  timeholdout_ablation_open.json
src/mmwave_radar_devtool/: __init__.py  capture.py  cfg_parser.py  cli.py  config.py  dca1000.py  exceptions.py  live_view.py  parser.py  profiles.py  range_profile_dataset.py  serial_control.py  telemetry_live.py  usb_telemetry.py  visualize.py
src/mmwave_radar_devtool/ml/: __init__.py  classification_eval.py  data.py  evaluate_classification.py  evaluate_regression_predictions.py  models.py  plot_experiments.py  predict.py  run_experiments.py  train_classification.py  train_regression.py  visualize_bin.py  visualize_dataset.py
tests/: test_cfg_parser.py  test_dca1000.py  test_live_view.py  test_ml_data.py  test_profiles.py  test_range_profile_dataset.py  test_serial_control.py  test_telemetry_live.py  test_train_classification_diagnostics.py  test_usb_telemetry.py  test_visualize_dataset.py
