[project]
name = "mmwave_radar_devtool"
version = "0.1.0"
description = "Python toolkit for TI mmWave radar development with the IWR1843 and DCA1000EVM"
readme = "README.md"
requires-python = ">=3.14"
license = {file = "LICENSE"}
authors = [{name = "SergiMuac"}]
keywords = ["mmwave", "radar", "iwr1843", "dca1000", "ti"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "numpy>=2.2.0",
    "pyserial>=3.5",
    "matplotlib>=3.10.0",
    "pydantic>=2.11.0",
    "typing-extensions>=4.12.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]
ml = [
    "torch>=2.11.0",
]

[project.scripts]
mmw = "mmwave_radar_devtool.cli:main"
mmw-train-classifier = "mmwave_radar_devtool.ml.train_classification:main"
mmw-train-regressor = "mmwave_radar_devtool.ml.train_regression:main"
mmw-predict = "mmwave_radar_devtool.ml.predict:main"
mmw-evaluate-classifier = "mmwave_radar_devtool.ml.evaluate_classification:main"
mmw-evaluate-regressor-preds = "mmwave_radar_devtool.ml.evaluate_regression_predictions:main"
mmw-run-experiments = "mmwave_radar_devtool.ml.run_experiments:main"
mmw-plot-experiments = "mmwave_radar_devtool.ml.plot_experiments:main"
mmw-visualize-bin = "mmwave_radar_devtool.ml.visualize_bin:main"
mmw-visualize-dataset = "mmwave_radar_devtool.ml.visualize_dataset:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmwave_radar_devtool"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["mmwave_radar_devtool"]
